bugs 🐛squished

--- a/style.css
+++ b/style.css
@@ -36,8 +36,9 @@ a:hover, a:active {
     color: #ffffff;
   }
 
- 	/* Dark theme gets some orange link flavour 🧡 */
-a:link, a:visited {
-  text-decoration: none;
-  color: #f5a142;
+ /* Dark theme gets some orange link flavour 🧡 */
+  a:link, a:visited {
+ 	text-decoration: none;
+  	color: #f5a142;
+	}
 }
